--- a/athena-aws-cmdb/athena-aws-cmdb-connection.yaml
+++ b/athena-aws-cmdb/athena-aws-cmdb-connection.yaml
@@ -96,6 +96,8 @@ Resources:
           - Action:
               - s3:GetObject
               - s3:ListBucket
+              - s3:ListAllMyBuckets
+              - s3:GetBucketAcl
               - s3:GetBucketLocation
               - s3:GetObjectVersion
               - s3:PutObject
