--- a/athena-aws-cmdb/athena-aws-cmdb.yaml
+++ b/athena-aws-cmdb/athena-aws-cmdb.yaml
@@ -74,6 +74,8 @@ Resources:
                 - rds:ListTagsForResource
                 - athena:GetQueryExecution
                 - s3:ListBucket
+                - s3:ListAllMyBuckets
+                - s3:GetBucketAcl
                 - athena:GetQueryExecution
               Effect: Allow
               Resource: '*'
